# apple-mail

./: .author  Cargo.toml  README.md  SKILL.md  flake.nix
skills/apple-mail/: SKILL.md
src/: applescript.rs  error.rs  lib.rs  main.rs
