[package]
name = "apple-mail"
version = "0.1.0"
edition = "2024"
description = "Apple Mail integration via AppleScript - works reliably without special permissions"
license = "MIT OR Apache-2.0"
keywords = ["apple-mail", "email", "applescript"]
categories = ["command-line-utilities", "email"]

[dependencies]
# Core functionality
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"

# MIME parsing
mailparse = "0.16"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
testing = []
